check encrypted password
